--- a/.env
+++ b/.env
@@ -3,7 +3,8 @@ APP_ENV=local
 APP_KEY=base64:mmnJV/1GyiIOITqw8PW/ioDZ+xZTtTAzLpnzFQ+3FTc=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
+FRONTEND_URL=http://localhost:3000
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
