Database setup and timezones
Edited the env file to connect to the database and changed the app.php to the correct timezone.

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=CalorieCommander
 APP_ENV=local
 APP_KEY=base64:mmnJV/1GyiIOITqw8PW/ioDZ+xZTtTAzLpnzFQ+3FTc=
 APP_DEBUG=true
@@ -20,12 +20,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=caloriecommander
+DB_USERNAME="root"
+DB_PASSWORD="kevin200407"
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
